# GUIAgent

./: .gitignore  README.md  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt
benchmark/: __init__.py  comparison.py  metrics.py  runner.py  system_monitor.py
benchmark/competitors/: __init__.py  playwright_agent.py  puppeteer_agent.py  selenium_agent.py
benchmark/tasks/: standard_tasks.py
docs/: API.md  ARCHITECTURE.md  BENCHMARK.md  DEPLOYMENT.md
electron_demo/: main.js  package.json  preload.js
electron_demo/gui_agent/: action_executor.js  agent_bridge.js
electron_demo/renderer/: app.js  index.html  styles.css
electron_demo/workflows/: sample_workflows.json
gui_agent/: action_executor.js
models/: __init__.py
models/action_parsers/: __init__.py  a11y_parser.py  coordinate_parser.py  dom_parser.py  hybrid_parser.py
models/configs/: __init__.py  gui_models.yaml
models/deploy/: __init__.py  model_registry.py  os_atlas_deploy.py  showui_deploy.py  ui_tars_deploy.py
renderer/: app.js  index.html
scripts/: __init__.py  clean.py  deploy_edge_vlm.py  run_benchmarks.py  serve_model.py  setup.py  setup_mac.sh
vlm_integration/: __init__.py  comparison.py  hybrid.py  orchestrator.py  preprocessor.py  privacy.py
