[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "edge-gui-agent"
version = "0.1.0"
description = "Edge Device GUI Agent — research, benchmark, and deploy GUI interaction models locally"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Edge GUI Agent Team"}
]
keywords = ["gui-agent", "vlm", "electron", "benchmark", "ui-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "vllm>=0.4.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "gputil>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "playwright>=1.42.0",
    "selenium>=4.18.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
electron = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
edge-gui-benchmark = "scripts.run_benchmark:main"
edge-gui-demo = "scripts.run_demo:main"

[tool.setuptools.packages.find]
include = ["models*", "benchmark*", "vlm_integration*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
